# AALpy

./: .gitignore  .pre-commit-config.yaml  Examples.py  LICENCE.txt  README.md  VPA.md  alergia_debug.py  algorithm_comparison.py  automata.pickle  det_cex_processing_test.py  edi_experiment.py  eq_queries.csv  eq_queries.npy  eq_queries_10.npy  eq_queries_10_tcp.npy  failing_test_cases.py  failures_10.npy  failures_10_tcp.npy  h_learning.py  hw_learning.py  inspect_results.py  kv_book_example.py  kv_bugs.txt  kv_test.py  kv_test_dfa.py  kv_test_edi.py  kv_test_mealy.py  main.py  main_vpa.py  mb_queries.csv  mb_queries.npy  mb_queries_10.npy  mb_queries_10_tcp.npy  mealy-simple-random-model.dot  mealy-simple-random-model.py  mealy_conformance_testing.py  mealy_conformance_testing_correct.py  mealy_conformance_testing_results.py  myExample.py  my_test.py  (+17 more)
Benchmarking/: Benchmark_ErrorStop.py  CompleteStochasticBenchmarking.py  StochasticAlgComparison.py  StochasticBenchmarking.py  StochasticBenchmarkingWPrism.py  StopWithErorrRate.py  all_results.pickle  benchmark.py  benchmark_alphabet_increase.py  benchmark_size_increase.py  cex_processing_benchmark.py  compare_lstar_and_kv.py  error_benchmark_statistics.py  evaluate_l_star_configurations.py  fm_benchmark.py  fm_plots.py  generate_plots.py  get_postive_sequnaces.py  json_lbt.py  mealy_conformance_testing.py  papni_vs_rpni_benchmarking.py  passive_mdp_vs_smm.py  passive_vpa_vs_rpni.py  rpni_papni_memory_footrpint.py  unamb_error_plot.py
DotModels/: Angluin_Mealy.dot  Angluin_Moore.dot  Small_Mealy.dot  arithmetics.dot  (+12 more)
(+4113 files in other folders)
